--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Ridoy Portfolio</title>
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="welcome-text">
             <h1>Welcome To</h1>
             <h1> <span class="orange-color">Ridoy</span> World!</h1>
@@ -30,7 +30,7 @@
         </div>
     </section>
 
-    <section class="middle-banner">
+    <section class="middle-banner flexible-container">
         <div class="ridoy-image2">
             <img src="images/ridoy-image2.png" alt="">
         </div>
@@ -44,22 +44,22 @@
     </section>
 
     <section>
-        <div>
-            <h1>Experiences</h1>
+        <h1 class="experinces">Experinces</h1>
+        <div class="flexible-container experience-area">
+            <div class="full-stack">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="baby-dev">
+                <h2>Baby Web developer</h2>
+                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
-       <div class="box-section">
-        <div>
-            <h1>Full Stack Web Developer</h1>
-            <h3>2021-Present | Pro Level Developer</h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
-        </div>
-
-        <div>
-            <h1>Baby Web Developer</h1>
-            <h3>2020-2021 | Programming Hero Learner</h3>
-            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
-        </div>
-       </div>
     </section>
+    <footer>
+        <p>© Peter Parker 2022, a Programming Hero initiative.</p>
+    </footer>
 </body>
 </html>
