--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </section>
     <footer>
-        <p>© Peter Parker 2022, a Programming Hero initiative.</p>
+        <p>© Ridoy 2022, full stack web developer.</p>
     </footer>
 </body>
 </html>
